--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -289,14 +289,6 @@ header .fa-bars{
     display: none;
 }
 
-.formulario{
-    display:none;
-    justify-content: space-around;
-    background-color: rgba(188, 143, 143, 0.956);
-    color: #fff;
-    width: 100%;
-}
-
 .ver-favoritos {
     display:flex;
     justify-content: space-around;
@@ -366,6 +358,20 @@ header .fa-bars{
 .cart-btn:hover{
     background: var(--pink);
 }
+
+#resultado > img{
+    height: 250px;
+    width: 250px;
+}
+#resultado{
+    display: none;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 70%;
+    margin: 10px;
+}
+
 .abrir{
     display: flex;
 }
@@ -448,57 +454,48 @@ header .fa-bars{
 .eliminar:hover{
     background: var(--pink);
 }
-
-#formulario{
-    flex:1 1 2rem;
-    box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
-    border: .1rem solid rgba(0, 0, 0,.1);
-    background: #fff;
-    border-radius: .5rem;
-    display: inline-block;
-    align-items: center;
-    color: #333;
-    text-transform: none;
+form {
+    display: block;
+    margin-top: 0em;
 }
 
-#formulario{
-    border: .1rem solid rgba(0, 0, 0,.1);
-    border-radius: .5rem;
-    margin: .7rem 0;
+.abrir-buscador{
+    display: inline-block;
+}
+
+.buscador{
+    display: inline-block;
+    position: absolute;
+    background: rgba(192, 156, 156, 0.977);
     width: 100%;
-    resize: none;
-    height: 3rem;
-    display: inline-block;
-    color: #666;
-    font-size: 1.5rem;
-    padding: 1rem 0;
+    height: 100%;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+    z-index: 9;
 }
-
-#formulario:focus{
-    border-color: var(--pink);
-}
-
-#formulario:hover{
-    color: var(--pink);
+#formulario{
+    background: rgba(188, 143, 143, 0.956);
+    border: none;
+    font-size: 16px;
+    height: 40px;
+    color: #fff;
+    border-bottom: 1px rgba(188, 143, 143, 0.956);
+    line-height: 40px;
+    padding: 0;
+    width: 50%;
 }
 
 #buscar{
-    display: inline-block;
-    margin-top: 0.5rem;
-    border-radius: 3rem;
-    background: #430064;
-    color: #fff;
-    padding: .5rem 1.5rem;
-    cursor:pointer;
-    font-size: 1.3rem;
-    justify-content: right;
+    background-color: rgba(185, 121, 121, 0.956);
+    border: none;
+    border-bottom: 1px rgba(188, 143, 143, 0.956);
+    height: 40px;
+    padding: 0;
+    width: 45px;
+    position: fixed;
 }
-
-#buscar:hover{
-    color: var(--pink);
-}
-
-
 
 
 
