--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -454,28 +454,24 @@ header .fa-bars{
 .eliminar:hover{
     background: var(--pink);
 }
-form {
+f-orm {
     display: block;
     margin-top: 0em;
 }
 
-.abrir-buscador{
-    display: inline-block;
-}
 
-.buscador{
+buscador{
     display: inline-block;
-    position: absolute;
+    position:;
     background: rgba(192, 156, 156, 0.977);
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
     top: 0;
     left: 0;
     justify-content: center;
     align-items: center;
-    z-index: 9;
 }
-#formulario{
+formulario{
     background: rgba(188, 143, 143, 0.956);
     border: none;
     font-size: 16px;
@@ -487,7 +483,7 @@ form {
     width: 50%;
 }
 
-#buscar{
+buscar{
     background-color: rgba(185, 121, 121, 0.956);
     border: none;
     border-bottom: 1px rgba(188, 143, 143, 0.956);
